# kettle

./: .gitignore  README.md  pyproject.toml
kettle/: database_handler.py  kettle.py  log_handler.py
kettle/templates/: base.html  kettle.html  new_kettle.html
